# erlmcp

./: .colima-validation-report.txt  .dockerignore  .dockerignore.optimized  .env.craftplan.example  .env.dev.template  .env.prod.template  .env.staging  .env.staging.template  .envrc  .ggenignore  .gitattributes  .gitignore  .gitlab-ci.yml  .tool-versions  25_GREATEST_BLUE_OCEANS.md  ACTUAL_COSTS.md  ADVANCED_LIFECYCLE_TESTS_SUMMARY.md  ADVERSARIAL_REVIEW_README.md  AGENTS.md  AGENTS_SUMMARY.md  AGENT_10_COMPLETION_SUMMARY.md  AGENT_10_FINAL_VALIDATION_SUMMARY.md  AGENT_12_COMPLETION.md  AGENT_12_STRESS_TEST_COMPLETE.md  AGENT_14_AUDIT_EXECUTIVE_SUMMARY.txt  AGENT_15_PRODUCTION_READINESS_CERTIFICATION.txt  AGENT_17_COMPLETION_REPORT.md  AGENT_17_EXECUTION_SUMMARY.md  AGENT_17_PHASE5A_COMPLETION_REPORT.md  AGENT_18_COMPLETE.md  AGENT_3_DELIVERY_INDEX.md  AGENT_4_BACKPRESSURE_DELIVERABLES.md  AGENT_4_DELIVERABLES.txt  AGENT_4_SECURITY_PERFORMANCE_AUDIT_SUMMARY.md  AGENT_5_MEMORY_OPTIMIZATION_DELIVERABLES.md  AGENT_6_DELIVERABLES.md  AGENT_8_LOGGING_DELIVERY_SUMMARY.txt  AGENT_9_FINAL_REPORT.md  AGENT_9_PROFILING_FINAL_SUMMARY.txt  ALGORITHM_OPTIMIZATIONS_SUMMARY.md  (+686 more)
.broken/: erlmcp_cluster_config.erl  erlmcp_cluster_consensus.erl  erlmcp_cluster_coordinator.erl  erlmcp_cluster_discovery.erl  erlmcp_cluster_heartbeat.erl  erlmcp_cluster_membership.erl  erlmcp_cluster_sync.erl  erlmcp_ets_optimizer.erl  erlmcp_message_batcher.erl  erlmcp_raft.erl  erlmcp_raft.hrl  erlmcp_raft_log.erl  erlmcp_raft_membership.erl  erlmcp_raft_state_machine.erl  erlmcp_raft_sup.erl  erlmcp_raft_transport.erl  erlmcp_shard_manager.erl  erlmcp_sharded_registry.erl  erlmcp_state_migration.erl  erlmcp_workflow_compensation.erl  erlmcp_workflow_governance.erl  erlmcp_workflow_monitor.erl  erlmcp_workflow_orchestrator.erl  erlmcp_workflow_persistence.erl  erlmcp_workflow_policy.erl  erlmcp_workflow_statemachine.erl
.claude/: AGENT_INDEX.md  COMMAND_INDEX.md  EPIC9_WORKFLOW.md  ERLANG_OTP_AGENT_GUIDE.md  METROLOGY_AUDIT_INDEX.md  README.md  SPARC_QUICK_REFERENCE.md  SYSTEM_GUIDE.md  TCPS_COMMANDS_COMPLETE.md  TCPS_COMMAND_ALIGNMENT.md  TCPS_FULL_SYSTEM_UPDATE_COMPLETE.md  TCPS_IMPLEMENTATION_COMPLETE.md  TCPS_SYSTEM_COMPLETE.md  WO-003-COMPLETE.md  memory.db  settings.json  settings.local.json  settings.local.json.example  validate-settings.sh
.claude-flow/: CAPABILITIES.md  agents.json  config.yaml  daemon-state.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml  docker-compose.yml  post-create.sh  post-start.sh
.erlmcp/: AGENT-06-EUNIT-REPORT.md  COVERAGE_ANALYSIS_11.md  RECEIPT-AGENT-19.md  RELEASE_CERTIFICATION_REPORT.md  agent-02-report.txt  agent-03-status.txt  agent-04-passed  agent-04-status.txt  agent-05-passed  agent-05-waiting  agent-06-partial.md  agent-07-passed  agent-07-report.txt  agent-08-failed  agent-09-blocked.md  agent-09-report.md  agent-10-passed  agent-11-passed  agent-11-report.md  (+28 more)
apps/swarmflow_os.disabled/: Cargo.toml  build.rs
apps/swarmflow_os.disabled/.cargo/: config.toml
apps/swarmflow_os.disabled/c_src/: Cargo.toml  Makefile  swf_rust_nif.rs
apps/swarmflow_os.disabled/src/: swarmflow.erl  swarmflow_os.app.src  swarmflow_os_app.erl  swf_case_sup.erl  swf_mcp_bridge.erl  swf_patch_proposer.erl  swf_promotion_engine.erl  swf_rust_nif.erl  swf_swarm_coordinator.erl
apps/swarmflow_pqchain.disabled/: Cargo.toml  HEURISTICS_MINER_IMPLEMENTATION.md
apps/swarmflow_pqchain.disabled/c_src/: Makefile  pqc_rust_nif.rs
apps/swarmflow_pqchain.disabled/doc/: CONTRACT_API.md  pqc_a2a_bridge.md
apps/swarmflow_pqchain.disabled/doc/diagrams/: README.md
apps/swarmflow_pqchain.disabled/src/: pqc_a2a_router.erl.skip  pqc_alignment.erl.skip  pqc_alpha_miner.erl.skip  pqc_armstrong_sup.erl.skip  pqc_block.erl.skip  pqc_c4_model.erl.skip  pqc_case.erl.skip  pqc_chain.erl.skip  pqc_consensus_sup.erl.skip  pqc_contract.erl.skip  pqc_crypto.erl.skip  pqc_mcp_bridge.erl.skip  pqc_mempool.erl.skip  pqc_mempool_sup.erl.skip  pqc_peer_channel.erl.skip  pqc_peer_sup.erl.skip  pqc_process_mining.erl.skip  pqc_projection_a2a.erl.skip  pqc_receipt.erl.skip  pqc_rust_nif.erl.skip  pqc_tools.erl.skip  swarmflow_pqchain.erl.skip  swarmflow_pqchain_app.erl.skip  swarmflow_pqchain_sup.erl.skip
apps/swarmflow_pqchain.disabled/test/: pqc_alpha_miner_tests.erl  pqc_c4_model_test.erl  pqc_case_registry_tests.erl  pqc_patterns_43_tests.erl
apps/swarmflow_pqchain/c_src/: Cargo.toml
native/mcp_governance/: Cargo.toml
native/mcp_governance/src/: lib.rs
(+7846 files in other folders)
