[package]
name = "pqc_rust_nif"
version = "1.0.0"
edition = "2021"
authors = ["erlmcp"]
description = "Post-Quantum Cryptography Rust NIF - NIST FIPS 203/204/205 implementations"

[lib]
name = "pqc_rust_nif"
path = "c_src/pqc_rust_nif.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34"
# Post-quantum cryptography crates
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.4"
pqcrypto-sphincsplus = "0.3"
pqcrypto-traits = "0.4"
# Hash functions
sha3 = "0.10"
blake3 = "1.5"
# Parallel processing
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
