[package]
name = "mcp_governance"
version = "0.1.0"
edition = "2021"
description = "MCP+ Governance computational core - hashing, serialization, evidence bundles"
license = "MIT"

[lib]
name = "mcp_governance"
crate-type = ["cdylib"]

[dependencies]
# Erlang NIF bindings
rustler = "0.34"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Binary serialization
bincode = "1.3"

# Base64 encoding
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
